--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:23090",
-      "sslPort": 44333
+      "applicationUrl": "http://localhost:51875",
+      "sslPort": 44378
     }
   },
   "profiles": {
-    "FirstMVCApp": {
+    "RazorPizzeria": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7102;http://localhost:5102",
+      "applicationUrl": "https://localhost:7236;http://localhost:5236",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
